2002-02-10  Bruno Haible  <bruno@clisp.org>

	* localename.c: Change copyright notice from GPL to LGPL.
	* eval-plural.h: Likewise.

2002-02-11  Bruno Haible  <bruno@clisp.org>

	* config.charset: Add support for NetBSD.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* eval-plural.h: Renamed from plural-eval.c.
	* dcigettext.c: Include eval-plural.h instead of plural-eval.c.
	* Makefile.in (COMHDRS): Remove plural-eval.c, add eval-plural.h.
	(DISTFILES.obsolete): Add plural-eval.c.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (libintl.la): Use @LTLIBICONV@ instead of @LIBICONV@.

2002-01-10  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* dcigettext.c (_nl_default_dirname): On OS/2, declare, not define.
	* localcharset.c: Rework OS/2 support.
	* config.charset: Add OS/2 support.
	* os2compat.c: Renamed from os2.c.
	(_nl_default_dirname): Define here.
	* os2compat.h: Moved here from ../os2/.
	* osdep.c: Update.
	* Makefile.in (COMHDRS): Add os2compat.h.
	(COMSRCS): Add os2compat.c, remove os2.c.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (libintl.la): Add -lc. Needed on AIX.

2002-01-02  Bruno Haible  <bruno@clisp.org>

	* loadmsgcat.c (_nl_init_domain_conv): Convert extern declaration to
	K&R syntax.

2002-01-02  Bruno Haible  <bruno@clisp.org>

	* plural.y: Fix %expect count.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* os2.c (os2_initialize): Use LOCALEDIR_MAX macro.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* libgettext.h: Moved to ../lib/gettext.h.
	* Makefile.in (HEADERS): Remove libgettext.h.
	(DISTFILES.obsolete): Add libgettext.h.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* gmo.h: Renamed from gettext.h.
	* gettext.h: Remove file.
	* gettextP.h: Update accordingly.
	* loadmsgcat.c: Likewise.